--- a/static/app/css/styles.css
+++ b/static/app/css/styles.css
@@ -1,3 +1,24 @@
+/*
+.megamenu {
+	min-width: 28rem;
+}
+
+* BREAKPOINTS *
+
+* MD - Applies <= 768px *
+@media screen and (max-width: 48em) {
+	.megamenu {
+		min-width: auto;
+	}
+}
+*/
+
+
+
+
+
+
+
 body.default-homepage span.app-name {
 	font-weight: bold;
 	color: inherit;
